inicializacion del proyecto

--- a/inicio/templates/inicio/paletas.html
+++ b/inicio/templates/inicio/paletas.html
@@ -4,12 +4,14 @@
 <title>Paletas</title>
 {% endblock title_head %}
 
+{% block h1_header %}
+Paletas
+{% endblock h1_header %}
 
 
-
-{% block contiene_header %}
+{% block main %}
 
 <p class="container">se creo la paleta! {{paleta.marca}}</p>
-{% endblock contiene_header %}
+{% endblock main %}
 
 
