--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
             <div class="container">
                 <a class="navbar-brand" href={% url "inicio" %}>inicio!</a>
                 <a class="navbar-brand" href={% url "paletas" %}>Paletas</a>
+                <a class="navbar-brand" href={% url "crear_paleta" %}>Crear Paletas</a>
                 {% comment "" %}<a class="btn btn-primary" href="#signup">Sign Up</a>{% endcomment %}
             </div>
         </nav>
