--- a/inicio/templates/inicio/paletas.html
+++ b/inicio/templates/inicio/paletas.html
@@ -11,7 +11,21 @@ Paletas
 
 {% block main %}
 
-<p class="container">se creo la paleta! {{paleta.marca}}</p>
+<form action="">
+    <input type="text" name="marca" placeholder="wilson, head...">
+    <input type="submit" value="Buscar">
+</form>
+{% if listado_de_paletas %}
+<ul>
+    {% for paleta in listado_de_paletas %}
+
+    <li>{{paleta}}</li>
+
+    {% endfor %}
+</ul>
+{% else %}
+<p>No se encontraron paletas. </p>
+{% endif %}
 {% endblock main %}
 
 
