--- a/inicio/templates/inicio/crear_autos.html
+++ b/inicio/templates/inicio/crear_autos.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block title_head %}
-<title> Crear paleta</title>
+<title> Crear auto</title>
 {% endblock title_head %}
 
 {% block h1_header %}
-Crear paleta
+Crear auto
 {% endblock h1_header %}
 
 
