--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url "inicio" %}>inicio!</a>
-                <a class="navbar-brand" href={% url "paletas" %}>Paletas</a>
-                <a class="navbar-brand" href={% url "crear_paleta" %}>Crear Paletas</a>
+                <a class="navbar-brand" href={% url "autos" %}>Autos</a>
+                <a class="navbar-brand" href={% url "crear_autos" %}>Crear Autos</a>
                 {% comment "" %}<a class="btn btn-primary" href="#signup">Sign Up</a>{% endcomment %}
             </div>
         </nav>
