inicializacion del proyecto

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <a class="navbar-brand" href={% url "inicio" %}>inicio!</a>
                 <a class="navbar-brand" href={% url "autos" %}>Autos</a>
-                <a class="navbar-brand" href={% url "crear_autos" %}>Crear Autos</a>
+                <a class="navbar-brand" href={% url "crear_auto" %}>crear auto</a>
                 {% comment "" %}<a class="btn btn-primary" href="#signup">Sign Up</a>{% endcomment %}
             </div>
         </nav>
