inicializacion del proyecto

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
                 <a class="navbar-brand" href={% url "inicio" %}>inicio!</a>
                 <a class="navbar-brand" href={% url "autos" %}>Autos</a>
                 <a class="navbar-brand" href={% url "crear_auto" %}>crear auto</a>
+                <a class="navbar-brand" href={% url "camion" %}>camion</a>
+                <a class="navbar-brand" href={% url "crear_camion" %}>crear camion</a>
+                <a class="navbar-brand" href={% url "vans" %}>vans</a>
+                <a class="navbar-brand" href={% url "crear_vans" %}>crear vans</a>
                 {% comment "" %}<a class="btn btn-primary" href="#signup">Sign Up</a>{% endcomment %}
             </div>
         </nav>
