--- a/inicio/templates/inicio/camiones.html
+++ b/inicio/templates/inicio/camiones.html
@@ -1,17 +1,29 @@
+{% extends "base.html" %}
+
+{% block title_head %}
+<title>Camiones</title>
+{% endblock title_head %}
+
+{% block h1_header %}
+Camiones
 {% endblock h1_header %}
 
 
 {% block main %}
 
-
-
+<form action="">
+    <input type="text" name="marca" placeholder="mercedes...">
+    <input type="submit" value="Buscar">
+</form>
+{% if listado_de_camioens %}
 <ul>
-    
+    {% for camion in listado_de_camiones %}
 
     <li>{{camion}}</li>
 
-  
+    {% endfor %}
 </ul>
-
-
+{% else %}
+<p>No se encontraron camiones. </p>
+{% endif %}
 {% endblock main %}
