inicializacion del proyecto

--- a/inicio/templates/inicio/camiones.html
+++ b/inicio/templates/inicio/camiones.html
@@ -15,7 +15,7 @@ Camiones
     <input type="text" name="marca" placeholder="mercedes...">
     <input type="submit" value="Buscar">
 </form>
-{% if listado_de_camioens %}
+{% if listado_de_camiones %}
 <ul>
     {% for camion in listado_de_camiones %}
 
