inicializacion del proyecto

--- a/inicio/templates/inicio/camiones.html
+++ b/inicio/templates/inicio/camiones.html
@@ -11,6 +11,10 @@ Camiones
 
 {% block main %}
 
+<p>
+    <a href={% url 'crear_camion' %}>Crear Camion</a>
+</p>
+
 <form action="">
     <input type="text" name="marca" placeholder="mercedes...">
     <input type="submit" value="Buscar">
