--- a/inicio/templates/inicio/vans.html
+++ b/inicio/templates/inicio/vans.html
@@ -11,6 +11,10 @@ Vans
 
 {% block main %}
 
+<p>
+    <a href={% url 'crear_vans' %}>Crear Vans</a>
+</p>
+
 <form action="">
     <input type="text" name="marca" placeholder="mercedes...">
     <input type="submit" value="Buscar">
