--- a/inicio/templates/inicio/autos.html
+++ b/inicio/templates/inicio/autos.html
@@ -11,6 +11,10 @@ Autos
 
 {% block main %}
 
+<p>
+    <a href={% url 'crear_auto' %}>Crear Auto</a>
+</p>
+
 <form action="">
     <input type="text" name="marca" placeholder="ferrari, BMW...">
     <input type="submit" value="Buscar">
@@ -19,7 +23,7 @@ Autos
 <ul>
     {% for auto in listado_de_autos %}
 
-    <li>{{auto}}</li>
+    <li>{{auto}} | <a href={% url "actualizar_auto" auto.id %}>Actualizar</a>| <a href={% url "eliminar_auto" auto.id %}>Eliminar</a> | <a href={% url 'detalle_auto' auto.id %}>Detalles</a></li>
 
     {% endfor %}
 </ul>
