--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,10 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url "inicio" %}>inicio!</a>
-                <a class="navbar-brand" href={% url "autos" %}>Autos</a>
-                <a class="navbar-brand" href={% url "crear_auto" %}>crear auto</a>
-                <a class="navbar-brand" href={% url "camion" %}>camion</a>
-                <a class="navbar-brand" href={% url "crear_camion" %}>crear camion</a>
+                <a class="navbar-brand" href={% url "autos" %}>Autos</a> 
+                <a class="navbar-brand" href={% url "camion" %}>camion</a> 
                 <a class="navbar-brand" href={% url "vans" %}>vans</a>
-                <a class="navbar-brand" href={% url "crear_vans" %}>crear vans</a>
+                <a class="navbar-brand" href={% url "motos" %}>Motos</a>
                 {% comment "" %}<a class="btn btn-primary" href="#signup">Sign Up</a>{% endcomment %}
             </div>
         </nav>
