inicializacion del proyecto

--- a/motos/templates/motos/Motos.html
+++ b/motos/templates/motos/Motos.html
@@ -18,7 +18,7 @@ Motos
 <ul>
     {% for Moto in listado_de_motos %}
 
-    <li>{{Moto}} | <a href={% url "actualizar_moto" moto.id %}>Actualizar</a>|<a href="detalle_moto">{{Moto}}</a>| <a href={% url "eliminar_moto" moto.id %}>Eliminar</a> | 
+    <li>{{Moto}} | <a href={% url "actualizar_moto" Moto.id %}>Actualizar</a>|<a href="detalle_moto">{{Moto}}</a>| <a href={% url "eliminar_moto" Moto.id %}>Eliminar</a> | 
        
     </li>
 
