--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                 <a class="navbar-brand" href={% url "motos" %}>Motos</a>
                 {% if not request.user.is.authenticate %}
                 <a class="btn btn-primary" href={% url 'login' %}>Iniciar Sesion</a>
+                <a class="btn btn-secondary" href={% url 'registrarse' %}>Regsitrarse</a>
                 {% else %}
                 <a class="navbar-brand" href={% url "#" %}>{{request.user.username}}</a> 
                 <a class="btn btn-warning" href={% url 'logout' %}>Cerrar Sesion</a>
