--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,11 @@
                 <a class="navbar-brand" href={% url "camion" %}>camion</a> 
                 <a class="navbar-brand" href={% url "vans" %}>vans</a>
                 <a class="navbar-brand" href={% url "motos" %}>Motos</a>
-                {% if not request.user.is.authenticate %}
-                <a class="btn btn-primary" href={% url 'login' %}>Iniciar Sesion</a>
-                <a class="btn btn-secondary" href={% url 'registrarse' %}>Regsitrarse</a>
+                {% if not request.user.is_authenticated %}
+                    <a class="btn btn-primary" href={% url 'login' %}>Iniciar Sesion</a>
+                    <a class="btn btn-secondary" href={% url 'registrarse' %}>Regsitrarse</a>
                 {% else %}
-                <a class="navbar-brand" href={% url "editar_perfil" %} >
+                    <a class="navbar-brand" href={% url "editar_perfil" %} >
                     {% if request.user.datosestra.avatar %}
                         <img src="{{request.user.datosestra.avatar.url}}" alt="avatar" height='40px'>
                     {% endif %}
@@ -39,6 +39,7 @@
                 </a> 
                 <a class="btn btn-warning" href={% url 'logout' %}>Cerrar Sesion</a>
                 {% endif %}
+                
             </div>
         </nav>
         <!-- Masthead-->
