inicializacion del proyecto

--- a/inicio/templates/inicio/crear_autos.html
+++ b/inicio/templates/inicio/crear_autos.html
@@ -12,8 +12,10 @@ Crear auto
 {% block main %}
 <form action="" method='POST'>
     {% csrf_token %}
-
-    {{formulario}}
+    <table>
+        {{formulario.media}}
+        {{formulario}}
+    </table>    
     <input type="submit" value="Crear">   
     {% comment "" %}<button>Crear</button>{% endcomment %}
 </form>
