--- a/inicio/templates/inicio/detalle_auto.html
+++ b/inicio/templates/inicio/detalle_auto.html
@@ -12,7 +12,7 @@ Auto {{auto.id}}
 {% block main %}
 <ul>
     <li>Marca: {{auto.marca}}</li>
-    <li>Descripcion: {{auto.descripcion}}</li>
+    <li>Modelo: {{auto.modelo | safe}}</li>
     <li>Año: {{auto.anio}}</li>
 </ul>
 
