--- a/accounts/templates/accounts/editar_perfil.html
+++ b/accounts/templates/accounts/editar_perfil.html
@@ -12,8 +12,9 @@ Editar Perfil
 {% block main %}
 <form action={% url "editar_perfil" %} method='POST' enctype='multipart/form-data'>
     {% csrf_token %}
-
-    {{formulario}}
+    <table>
+     {{formulario}}
+    </table>
     <input type="submit" value="Editar Datos">   
     
 </form>
