--- a/inicio/templates/inicio/actualizar_auto.html
+++ b/inicio/templates/inicio/actualizar_auto.html
@@ -12,8 +12,10 @@ Actualizar auto
 {% block main %}
 <form action="" method='POST'>
     {% csrf_token %}
-
-    {{formulario}}
+    <table>
+        {{formulario.media}}
+        {{formulario}}
+    </table>
     <input type="submit" value="Actualizar">   
     
 </form>
