--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <a class="btn btn-primary" href={% url 'login' %}>Iniciar Sesion</a>
                     <a class="btn btn-secondary" href={% url 'registrarse' %}>Regsitrarse</a>
                 {% else %}
-                    <a class="navbar-brand" href={% url "editar_perfil" %} >
+                    <a class="navbar-brand" href={% url "perfil" %} >
                     {% if request.user.datosestra.avatar %}
                         <img src="{{request.user.datosestra.avatar.url}}" alt="avatar" height='40px'>
                     {% endif %}
