--- a/accounts/templates/accounts/editar_perfil.html
+++ b/accounts/templates/accounts/editar_perfil.html
@@ -13,7 +13,8 @@ Editar Perfil
 <form action={% url "editar_perfil" %} method='POST' enctype='multipart/form-data'>
     {% csrf_token %}
     <table>
-     {{formulario}}
+        {{formulario.media}}
+        {{formulario}}
     </table>
     <input type="submit" value="Editar Datos">   
     
