--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                     <a class="btn btn-secondary" href={% url 'registrarse' %}>Regsitrarse</a>
                 {% else %}
                     <a class="navbar-brand" href={% url "perfil" %} >
-                    {% if request.user.datosestra.avatar %}
+                    {% if request.user.datosextra.avatar %}
                         <img src="{{request.user.datosestra.avatar.url}}" alt="avatar" height='40px'>
                     {% endif %}
                     {{request.user.username}}
